--- a/parts/autoproject/addservicedlgbase.ui
+++ b/parts/autoproject/addservicedlgbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>AddServiceDialogBase</class>
 <widget class="QDialog">
     <property name="name">
@@ -33,7 +33,7 @@
                 <cstring>GroupBox1</cstring>
             </property>
             <property name="title">
-                <string>&amp;Service</string>
+                <string>&amp;Service File</string>
             </property>
             <grid>
                 <property name="name">
@@ -111,6 +111,12 @@
                             </property>
                             <property name="sizeType">
                                 <enum>Expanding</enum>
+                            </property>
+                            <property name="sizeHint">
+                                <size>
+                                    <width>20</width>
+                                    <height>20</height>
+                                </size>
                             </property>
                         </spacer>
                     </hbox>
@@ -246,7 +252,7 @@
                                 <property name="clickable">
                                     <bool>true</bool>
                                 </property>
-                                <property name="resizeable">
+                                <property name="resizable">
                                     <bool>true</bool>
                                 </property>
                             </column>
@@ -289,6 +295,12 @@
                                     <property name="sizeType">
                                         <enum>Expanding</enum>
                                     </property>
+                                    <property name="sizeHint">
+                                        <size>
+                                            <width>20</width>
+                                            <height>20</height>
+                                        </size>
+                                    </property>
                                 </spacer>
                                 <widget class="QPushButton">
                                     <property name="name">
@@ -316,6 +328,12 @@
                                     <property name="sizeType">
                                         <enum>Expanding</enum>
                                     </property>
+                                    <property name="sizeHint">
+                                        <size>
+                                            <width>20</width>
+                                            <height>20</height>
+                                        </size>
+                                    </property>
                                 </spacer>
                             </vbox>
                         </widget>
@@ -327,7 +345,7 @@
                                 <property name="clickable">
                                     <bool>true</bool>
                                 </property>
-                                <property name="resizeable">
+                                <property name="resizable">
                                     <bool>true</bool>
                                 </property>
                             </column>
@@ -356,7 +374,7 @@
                         <property name="clickable">
                             <bool>true</bool>
                         </property>
-                        <property name="resizeable">
+                        <property name="resizable">
                             <bool>true</bool>
                         </property>
                     </column>
@@ -367,7 +385,7 @@
                         <property name="clickable">
                             <bool>true</bool>
                         </property>
-                        <property name="resizeable">
+                        <property name="resizable">
                             <bool>true</bool>
                         </property>
                     </column>
@@ -441,13 +459,19 @@
                     <property name="sizeType">
                         <enum>Expanding</enum>
                     </property>
+                    <property name="sizeHint">
+                        <size>
+                            <width>20</width>
+                            <height>20</height>
+                        </size>
+                    </property>
                 </spacer>
                 <widget class="QPushButton">
                     <property name="name">
                         <cstring>okbutton</cstring>
                     </property>
                     <property name="text">
-                        <string>&amp;Add</string>
+                        <string>&amp;OK</string>
                     </property>
                     <property name="autoDefault">
                         <bool>true</bool>
